--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -8,8 +8,6 @@ on:
   pull_request:
       types: [opened, synchronize, reopened]
 
- 
-
 name: SonarQube Scan
 jobs:
   sonarqube:
@@ -19,15 +17,10 @@ jobs:
     - name: Checking out
       uses: actions/checkout@master
       with:
-        # Disabling shallow clone is recommended for improving relevancy of reporting
+        # Disabling shallow clones is recommended for improving the relevancy of reporting
         fetch-depth: 0
     - name: SonarQube Scan
       uses: kitabisa/sonarqube-action@v1.2.0
       with:
         host: ${{ secrets.SONARQUBE_HOST }}
         login: ${{ secrets.SONARQUBE_TOKEN }}
-        projectKey: Github-Action-Scan
-    - name: Use GitHub Token
-      run: |
-        # You can use ${{ secrets.GITHUB_TOKEN }} for actions that require GitHub authentication
-        echo "Using GitHub Token: ${{ secrets.GITHUB_TOKEN }}"
